fix: 🐛 [api] change column name from username to name
